<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="32dp">

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="Prijava"
        android:textColor="@color/Main"
        android:textSize="28sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edittext_background"
        android:drawableStart="@android:drawable/ic_menu_myplaces"
        android:hint="Korisničko ime"
        android:inputType="text"
        android:padding="12dp" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@drawable/edittext_background"
        android:drawableStart="@android:drawable/ic_lock_lock"
        android:hint="Lozinka"
        android:inputType="textPassword"
        android:padding="12dp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/Main"
        android:padding="12dp"
        android:text="Prijavi se"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

</LinearLayout>
