<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Drawer Layout -->
    <androidx.drawerlayout.widget.DrawerLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/drawer_layout"
        android:fitsSystemWindows="true"
        tools:openDrawer="start">

        <!-- Main content layout for the app -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- Toolbar -->
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/Main"
                app:titleTextColor="@android:color/white"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

            <!-- FrameLayout to hold the fragments -->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/frame_layout"/>

        </LinearLayout>

        <!-- Navigation Drawer -->
        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:headerLayout="@layout/nav_header"
            app:menu="@menu/nav_menu"
            app:itemIconTint="@color/Main"
            app:itemTextColor="@color/Main"/>
    </androidx.drawerlayout.widget.DrawerLayout>

    <!-- BottomAppBar -->
    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/White"
        app:fabCradleMargin="10dp"
        app:fabCradleRoundedCornerRadius="50dp">

        <!-- BottomNavigationView inside BottomAppBar -->
        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@android:color/transparent"
            app:itemIconTint="@color/Main"
            app:itemTextColor="@color/Main"
            app:labelVisibilityMode="labeled"
            app:menu="@menu/bottom_menu" />

    </com.google.android.material.bottomappbar.BottomAppBar>

    <!-- Floating Action Button -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/White"
        app:strokeColor="@android:color/transparent"
        app:strokeWidth="0dp"
        app:rippleColor="@android:color/transparent"
        android:stateListAnimator="@null"
        android:src="@drawable/photo_camera_24px"
        app:layout_anchor="@id/bottomAppBar"
        app:maxImageSize="40dp"
        app:tint="@color/Main"
        android:contentDescription=""/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
