<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_24dp_ffffff"
            android:title="Home"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings_24dp_ffffff"
            android:title="Settings"/>
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/share_24dp_ffffff"
            android:title="Share"/>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/info_24dp_ffffff"
            android:title="About Us"/>
    </group>
    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/exit_to_app_24dp_ffffff"
                android:title="Logout"/>
        </menu>
    </item>
</menu>